--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
   <meta property="og:type" content="article">
 
-  <link href="css/style.css" rel="stylesheet">
+  <link href=" https://n-kenichi.github.io/aoba/style.css" rel="stylesheet">
   <link href="css/hamburger.css" rel="stylesheet">
   <script src="js/main.js" charset="utf-8"></script>
 </head>
