--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link href="https://n-kenichi.github.io/aoba/style.css" rel="stylesheet">
   <link href="https://n-kenichi.github.io/aoba/hamburger.css" rel="stylesheet">
-  <script src="js/main.js" charset="utf-8"></script>
+  <script src="https://n-kenichi.github.io/aoba/main.js" charset="utf-8"></script>
 </head>
 <body>
   <header>
