--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="h_nav">
       <a class="logo" href="#top">
-        <img src="https://n-kenichi.github.io/aoba/img/h_logo.png" alt="あおば整骨院グループ">
+        <img src="img/h_logo.png" alt="あおば整骨院グループ">
       </a>
       <div class="menu_container">
         <a id="menu_btn" class="menu-trigger" href="#">
