--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="article">
 
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800;900&display=swap" rel="stylesheet">
-  <link href="https://n-kenichi.github.io/aoba/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <link href="https://n-kenichi.github.io/aoba/hamburger.css" rel="stylesheet">
   <script src="https://n-kenichi.github.io/aoba/main.js" charset="utf-8"></script>
 </head>
