--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800;900&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/hamburger.css" rel="stylesheet">
-  <script src="https://n-kenichi.github.io/aoba/main.js" charset="utf-8"></script>
+  <script src="js/main.js" charset="utf-8"></script>
 </head>
 <body>
   <header>
