--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <div class="salesContents_bnr">
         <img src="img/salesContents.png" alt="初めてイオン整骨院に来院される方へ どこへ行っても良くならない身体の悩み・症状を当院で改善していきませんか？ 骨盤矯正&amp;筋肉調整&amp;筋膜リリース&amp;ストレッチトレーニング 初回限定 通常4,620円+税&rarr;2,980円+税">
       </div>
-      <p class="text">慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、青葉台整骨院にお越しください！<br>
-      当院では、ここ変える、骨盤矯正や筋肉調整などの”手技療法”と超音波や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。変えるここまでお子様連れのママさんも大歓迎です！<br>
-      青葉台駅より徒歩●分と近く、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。電話、Webからご予約いただけますので、まずはお気軽にお気軽にご相談くださいませ。</p>
+      <p class="text">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお越しください！<br>
+      当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！<br>
+      お電話、メールにてご予約いただけますので、まずはお気軽にご相談くださいませ。</p>
     </section>
     <section id="worries" class="sec">
       <div class="worries_bnr_01">
@@ -86,24 +86,31 @@
         <p class="text">カウンセリング、電気治療、15分のマッサージ治療を行う通常の施術料金は下記の通りです。</p>
         <table class="price_table">
           <tr>
-            <th>&nbsp;</th>
+            <th>自己負担割合</th>
             <th>1割</th>
             <th>2割</th>
             <th>3割</th>
           </tr>
           <tr>
             <td class="ttl_cel">1回目<span class="t_small">(初診を含む)</span></td>
-            <td>500</td>
+            <td>550</td>
             <td>1000</td>
             <td>1500</td>
           </tr>
           <tr>
-            <td class="ttl_cel">2回目〜</td>
-            <td><span class="red">160</span></td>
+            <td class="ttl_cel">2回目</td>
+            <td>310</td>
+            <td>500</td>
+            <td>690</td>
+          </tr>
+          <tr>
+            <td class="ttl_cel">3回目〜</td>
+            <td><span class="red">200</span></td>
             <td><span class="red">360</span></td>
-            <td><span class="red">490</span></td>
+            <td><span class="red">520</span></td>
           </tr>
         </table>
+        <p class="annotation">※ 医療保険による自己負担割合によって金額が異なります。</p>
       </div>
       <div id="info_time" class="i_block info_time">
         <h2>診療時間</h2>
@@ -162,14 +169,13 @@
       </div>
     </section>
     <section id="introduction" class="sec">
-      <h2>院長紹介</h2>
+      <h2>院長挨拶</h2>
       <div class="introduction_img_box">
         <span><img src="img/introduction.png" alt="院長写真"></span>
       </div>
       <div class="text">
-        <p class="indent">私がこの仕事を目指そうと思ったのは高校生の時でした。部活動はテニスをしていて、大会前に怪我をした関係で、歩くこともできず、諦めかけていた時に顧問の先生の紹介で整骨院にお世話になりました。不安になっていた私に整骨院の先生は、「大丈夫、大会には絶対に出させてやるから頑張ろう。」と言っていただき、実際に大会に出れるまで回復することが出来ました。その時からこんな先生の様になりたい、痛みで悩んでる人や怪我で苦しんでいる人の手助けがしたいと次第に思うようになっていきました。</p>
-        <p class="indent">当院では、患者様と二人三脚で治していく事を強みとしています。患者様のお悩み、不安に思っていること、どの様な状態か、しっかり問診させていただきます。その上で、患者様に分かりやすい的確なアドバイスをさせて頂きます。</p>
-        <p class="indent">必ず痛みはとれる。信念を持って治療をしています。横浜市、地域で本当に喜ばれる、選ばれる整骨院を目指します。</p>
+        <p class="indent">こんにちは、あおば整骨院グループ、院長の木村康寛と申します。10年以上のキャリアから、患者様と二人三脚で治していく事を強みとしており、ご自宅でのケアの仕方、再発しないような筋力トレーニングなどを積極的に提案させて頂きます。</p>
+        <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされるそんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
       </div>
     </section>
     <section id="voice" class="sec">
