--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="img/salesContents.png" alt="初めてイオン整骨院に来院される方へ どこへ行っても良くならない身体の悩み・症状を当院で改善していきませんか？ 骨盤矯正&amp;筋肉調整&amp;筋膜リリース&amp;ストレッチトレーニング 初回限定 通常4,620円+税&rarr;2,980円+税">
       </div>
       <p class="text">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお越しください！<br>
-      当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！<br>
+      　当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！<br>
       お電話、メールにてご予約いただけますので、まずはお気軽にご相談くださいませ。</p>
     </section>
     <section id="worries" class="sec">
@@ -110,7 +110,7 @@
             <td><span class="red">520</span></td>
           </tr>
         </table>
-        <p class="annotation">※ 医療保険による自己負担割合によって金額が異なります。</p>
+        <p class="annotation">※ 医療保険の自己負担割合によって金額が異なります。</p>
       </div>
       <div id="info_time" class="i_block info_time">
         <h2>診療時間</h2>
@@ -158,14 +158,14 @@
 
         <div>
           <h3>メディアも取り上げる矯正治療</h3>
-          <p class="text bgImg_01">痛みの原因とも言える「身体のゆがみ。」やよい整骨院オリジナルのゆがみ骨盤矯正でからだのゆがみを整えていきます。ゆがみ骨盤矯正は、骨と筋肉それぞれにアプローチする治療法。腰痛が改善した！という声を多数頂いております。</p>
+          <p class="text bgImg_01">痛みの原因とも言える「身体のゆがみ」。当院独自のゆがみ骨盤矯正でからだの調子を整えていきます。ゆがみ骨盤矯正は、骨と筋肉それぞれにアプローチする治療法。腰痛が改善した！という声を多数頂いております。</p>
         </div>
         
         <h3>誠実なカウンセリング</h3>
-        <p class="text bgImg_02">何もわからない状態で施術に入るようなことはありえません。やよい整骨院では誠実なカウンセリングと納得のいくわかりやすい痛みの原因について説明します。どのような施術をしていくのか、施術スケジュールとともに、患者様にわかりやすく説明していきます。</p>
+        <p class="text bgImg_02">何もわからない状態で施術に入るようなことはありえません。誠実なカウンセリングと納得のいくわかりやすい痛みの原因について説明します。どのような施術をしていくのか、施術スケジュールとともに、患者様にわかりやすく説明していきます。</p>
         
         <h3>部分ではなく全身的な治療</h3>
-        <p class="text bgImg_03">やよい整骨院は、部分の痛みだけの治療でなく、痛みの原因を見極めて適切な治療をしていくことで、早期改善を目指します。電気をあてて湿布を渡すだけの施術は行っておりませんのでご安心下さい。</p>
+        <p class="text bgImg_03">あおば整骨院グループでは、部分の痛みだけの治療でなく、痛みの原因を見極めて適切な治療をしていくことで、早期改善を目指します。電気をあてて湿布を渡すだけの施術は行っておりませんのでご安心下さい。</p>
       </div>
     </section>
     <section id="introduction" class="sec">
