--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       </div>
     </section>
     <section id="salesContents" class="sec">
-      <h2>あおば整骨院グループについて</h2>
       <div class="salesContents_bnr">
-        <img src="img/salesContents.png" alt="初めてイオン整骨院に来院される方へ どこへ行っても良くならない身体の悩み・症状を当院で改善していきませんか？ 骨盤矯正&amp;筋肉調整&amp;筋膜リリース&amp;ストレッチトレーニング 初回限定 通常4,620円+税&rarr;2,980円+税">
-      </div>
+        <img src="img/salesContents.png" alt="延長サービス">
+      </div>      
+      <h2>あおば整骨院グループについて</h2>
       <p class="text">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお越しください！<br>
       　当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！<br>
       お電話、メールにてご予約いただけますので、まずはお気軽にご相談くださいませ。</p>
@@ -68,13 +68,12 @@
         <img src="img/bnr_01_worries.png" alt="相模大野周辺地域の皆様！ このようなお悩みはイオン整骨院にご相談ください！">
       </div>
       <ul class="worries_bnr_02">
-        <li><a href="#dummy"><img src="img/bnr_01.jpg" alt="肩の痛み
-          肩のコリやハリをどうにかしたい"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_02.jpg" alt="腰の痛み 続く腰の痛みやしびれなどの不調が気になる"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_03.jpg" alt="頭痛 繰り返し起こる頭の痛みから解放されたい"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_04.jpg" alt="スポーツ障害 ケガのリハビリ・再発防止・予防"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_05.jpg" alt="骨盤矯正 身体のゆがみを正しい位置へと整えます"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_06.jpg" alt="交通事故 事故のケガ・むち打ち・めまいや頭痛に"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_01.jpg" alt="肩の痛み"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_02.jpg" alt="腰の痛み"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_03.jpg" alt="スポーツ障害"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_04.jpg" alt="体の歪み"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_05.jpg" alt="寝違い"></a></li>
+        <li><a href="#dummy"><img src="img/bnr_06.jpg" alt="交通事故"></a></li>
       </ul>
       <div class="contactBtn_block">
         <a href="#contactForm"><img src="img/contact_btn.png" alt="問い合わせする"></a>
@@ -182,21 +181,21 @@
       <h2>患者様の喜びの声</h2>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
-          <img src="img/img_voice_01.png" alt="">
+          <img src="img/img_voice_01.png" alt="喜びの声">
           <span>アスリート<br> 栗山様</span>
         </div>
         <p class="voice_item_txt indent">先生はとてもよく体のことを勉強なさっている方で、説明も丁寧です。専門機器なども適宜用いて個人個人に合わせた施術を行っていて、施術前後でどのように体が変化したかも自覚できる形で提示してくれるので、効果が実感できます。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
-          <img src="img/img_voice_02.png" alt="">
+          <img src="img/img_voice_02.png" alt="喜びの声">
           <span>看護師 藤田様</span>
         </div>
         <p class="voice_item_txt indent">とても優しく丁寧に対応していただいています。長年悩んでいたひざの痛みは1回受けただけでもかなり改善し、腰の痛みも楽になりました。続けて通うことで、メンテナンスレベルからパフォーマンス向上まで期待する事ができます。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
-          <img src="img/img_voice_03.png" alt="">
+          <img src="img/img_voice_03.png" alt="喜びの声">
           <span>会社員 菊地様</span>
         </div>
         <p class="voice_item_txt indent">まずはお試しで行ってみようと思い治療を受けに行きました。自分が想像してた以上に１回の治療だけで楽になりました。不思議なことに治療を受けだしてから、朝起きるときに痛かった腰の痛みと、立ち上がる時の痛みが改善された事を実感しています。</p>
