--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <img src="img/salesContents.png" alt="延長サービス">
       </div>      
       <h2>あおば整骨院グループについて</h2>
-      <p class="indent">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお越しください！</p>
-      <p class="indent">当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！</p>
-      <p class="indent">お電話、ホームページのお問い合わせからご予約いただけますので、まずはお気軽にご相談くださいませ。</p>
+      <p class="text">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお任せ下さい！</p>
+      <p class="text">当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！</p>
+      <p class="text">お電話、ホームページのお問い合わせからご予約いただけますので、まずはお気軽にご相談下さいませ。</p>
     </section>
     <section id="worries" class="sec">
       <div class="worries_bnr_01">
@@ -92,21 +92,21 @@
           </tr>
           <tr>
             <td class="ttl_cel">1回目<span class="t_small">(初診を含む)</span></td>
-            <td>550</td>
-            <td>1000</td>
-            <td>1500</td>
+            <td>550円</td>
+            <td>1000円</td>
+            <td>1500円</td>
           </tr>
           <tr>
             <td class="ttl_cel">2回目</td>
-            <td>310</td>
-            <td>500</td>
-            <td>690</td>
+            <td>310円</td>
+            <td>500円</td>
+            <td>690円</td>
           </tr>
           <tr>
             <td class="ttl_cel">3回目〜</td>
-            <td><span class="red">200</span></td>
-            <td><span class="red">360</span></td>
-            <td><span class="red">520</span></td>
+            <td><span class="red">200円</span></td>
+            <td><span class="red">360円</span></td>
+            <td><span class="red">520円</span></td>
           </tr>
         </table>
         <p class="annotation">※ 医療保険の自己負担割合によって金額が異なります。</p>
@@ -233,7 +233,7 @@
 
     <section id="access" class="sec access">
       <h2>アクセス</h2>
-      <p class="indent">あおば整骨院グループでは、２つの整骨院を経営しております。ご自宅から通いやすい方へお越し下さい。</p>      
+      <p class="indent">あおば整骨院グループでは、２つの整骨院を経営しております。ご自宅から通いやすい方へお越し下さいませ。</p>      
       <div class="i_block">
         <h3>やよい整骨院</h3>
         <div class="gmap">
