--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>      
       <h2>あおば整骨院グループについて</h2>
       <p class="indent">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお任せ下さい！</p>
-      <p class="indent">当院では、骨盤矯正や筋肉調整などの”手技療法”と鍼灸治療や低周波などの”電気療法”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！</p>
+      <p class="indent">当院では、骨盤矯正や筋肉調整などの”手技療法”、低周波などの”電気療法”、体質改善を図る”鍼灸治療”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！</p>
       <p class="indent">お電話、ホームページのお問い合わせからご予約いただけますので、まずはお気軽にご相談下さいませ。</p>
     </section>
     <section id="worries" class="sec">
@@ -174,7 +174,7 @@
       </div>
       <div class="text">
         <p class="indent">こんにちは、あおば整骨院グループ、院長の木村康寛と申します。10年以上のキャリアから、患者様と二人三脚で治していく事を強みとしており、ご自宅でのケアの仕方、再発しないような筋力トレーニングなどを積極的に提案させて頂きます。</p>
-        <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされるそんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
+        <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされる、そんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
       </div>
     </section>
     <section id="voice" class="sec">
