--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <tr>
             <td class="ttl_cel">1回目<span class="t_small">(初診を含む)</span></td>
             <td>550<span class="t_small">円</span></td>
-            <td>1000<span class="t_small">円</span></td>
-            <td>1500<span class="t_small">円</span></td>
+            <td>1,000<span class="t_small">円</span></td>
+            <td>1,500<span class="t_small">円</span></td>
           </tr>
           <tr>
             <td class="ttl_cel">2回目</td>
@@ -157,7 +157,7 @@
 
         <div>
           <h3>メディアも取り上げる矯正治療</h3>
-          <p class="text bgImg_01">痛みの原因とも言える「身体のゆがみ」。当院独自のゆがみ骨盤矯正でからだの調子を整えていきます。ゆがみ骨盤矯正は、骨と筋肉それぞれにアプローチする治療法。腰痛が改善した！という声を多数頂いております。</p>
+          <p class="text bgImg_01">痛みの原因とも言える「体のゆがみ」。当院独自のゆがみ骨盤矯正でからだの調子を整えていきます。ゆがみ骨盤矯正は、骨と筋肉それぞれにアプローチする治療法。腰痛が改善した！という声を多数頂いております。</p>
         </div>
         
         <h3>誠実なカウンセリング</h3>
