--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <section id="access" class="sec access">
       <h2>アクセス</h2>
-      <p class="indent">あおば整骨院グループでは、２つの整骨院を経営しております。ご自宅から通いやすい方へお越し下さいませ。</p>      
+      <p class="text">あおば整骨院グループでは、２つの整骨院を経営しております。ご自宅から通いやすい方へお越し下さいませ。</p>
       <div class="i_block">
         <h3>やよい整骨院</h3>
         <div class="gmap">
