--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>あおば整骨院グループ</title>
+  <title>ながつき整骨院</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta property="og:title" content="">
@@ -22,7 +22,7 @@
   <header>
     <nav class="h_nav">
       <a class="logo" href="#top">
-        <img src="img/h_logo.png" alt="あおば整骨院グループ">
+        <img src="img/h_logo.png" alt="ながつき整骨院">
       </a>
       <div class="menu_container">
         <a id="menu_btn" class="menu-trigger" href="#">
@@ -35,7 +35,7 @@
     <div id="gloval-nav">
       <nav>
         <ul id="navigation">
-          <li><a href="#salesContents" class="ls">あおば整骨院グループについて</a></li>
+          <li><a href="#salesContents" class="ls">ながつき整骨院について</a></li>
           <li><a href="#info" class="ls">料金の目安</a></li>
           <li><a href="#info_time" class="ls">診療の時間</a></li>
           <li><a href="#info_3feature" class="ls">整骨院の３つの特徴</a></li>
@@ -51,29 +51,29 @@
   <div class="container scroll-container">
     <section id="mainVisual" class="sec">
       <div class="mv_box">
-        <img src="img/mv_01.jpg" alt="メインビジュアル">
+        <img src="img/mv_01.jpg" alt="ながつき整骨院">
       </div>
     </section>
     <section id="salesContents" class="sec">
       <div class="salesContents_bnr">
         <img src="img/salesContents.png" alt="延長サービス">
-      </div>      
-      <h2>あおば整骨院グループについて</h2>
-      <p class="indent">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、あおば整骨院グループにお任せ下さい！</p>
+      </div>
+      <h2>ながつき整骨院について</h2>
+      <p class="indent">ぎっくり腰や慢性的な肩・腰の痛み、スポーツ障害、交通事故によるむち打ちなどでお悩みなら、ながつき整骨院にお任せ下さい！</p>
       <p class="indent">当院では、骨盤矯正や筋肉調整などの”手技療法”、低周波などの”電気療法”、体質改善を図る”鍼灸治療”を組み合わせ、患者様のお悩みの早期解消を目指します。また、平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。もちろん、お子様連れのママさんも大歓迎です！</p>
       <p class="indent">お電話、ホームページのお問い合わせからご予約いただけますので、まずはお気軽にご相談下さいませ。</p>
     </section>
     <section id="worries" class="sec">
       <div class="worries_bnr_01">
-        <img src="img/bnr_01_worries.png" alt="相模大野周辺地域の皆様！ このようなお悩みはイオン整骨院にご相談ください！">
+        <img src="img/bnr_01_worries.png" alt="ながつき整骨院にご相談">
       </div>
       <ul class="worries_bnr_02">
-        <li><a href="#dummy"><img src="img/bnr_01.jpg" alt="肩の痛み"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_02.jpg" alt="腰の痛み"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_03.jpg" alt="スポーツ障害"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_04.jpg" alt="体の歪み"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_05.jpg" alt="寝違い"></a></li>
-        <li><a href="#dummy"><img src="img/bnr_06.jpg" alt="交通事故"></a></li>
+        <li><a href><img src="img/bnr_01.jpg" alt="肩の痛み"></a></li>
+        <li><a href><img src="img/bnr_02.jpg" alt="腰の痛み"></a></li>
+        <li><a href><img src="img/bnr_03.jpg" alt="スポーツ障害"></a></li>
+        <li><a href><img src="img/bnr_04.jpg" alt="体の歪み"></a></li>
+        <li><a href><img src="img/bnr_05.jpg" alt="寝違い"></a></li>
+        <li><a href><img src="img/bnr_06.jpg" alt="交通事故"></a></li>
       </ul>
       <div class="contactBtn_block">
         <a href="#contactForm"><img src="img/contact_btn.png" alt="問い合わせする"></a>
@@ -159,12 +159,12 @@
           <h3>メディアも取り上げる矯正治療</h3>
           <p class="text bgImg_01">痛みの原因とも言える「体のゆがみ」。当院独自のゆがみ骨盤矯正でからだの調子を整えていきます。ゆがみ骨盤矯正は、骨と筋肉それぞれにアプローチする治療法。腰痛が改善した！という声を多数頂いております。</p>
         </div>
-        
+
         <h3>誠実なカウンセリング</h3>
         <p class="text bgImg_02">何もわからない状態で施術に入るようなことはありえません。誠実なカウンセリングと納得のいくわかりやすい痛みの原因について説明します。どのような施術をしていくのか、施術スケジュールとともに、患者様にわかりやすく説明していきます。</p>
-        
+
         <h3>部分ではなく全身的な治療</h3>
-        <p class="text bgImg_03">あおば整骨院グループでは、部分の痛みだけの治療でなく、痛みの原因を見極めて適切な治療をしていくことで、早期改善を目指します。電気をあてて湿布を渡すだけの施術は行っておりませんのでご安心下さい。</p>
+        <p class="text bgImg_03">ながつき整骨院では、部分の痛みだけの治療でなく、痛みの原因を見極めて適切な治療をしていくことで、早期改善を目指します。電気をあてて湿布を渡すだけの施術は行っておりませんのでご安心下さい。</p>
       </div>
     </section>
     <section id="introduction" class="sec">
@@ -173,7 +173,7 @@
         <span><img src="img/introduction.png" alt="院長写真"></span>
       </div>
       <div class="text">
-        <p class="indent">こんにちは、あおば整骨院グループ、院長の木村康寛と申します。10年以上のキャリアから、患者様と二人三脚で治していく事を強みとしており、ご自宅でのケアの仕方、再発しないような筋力トレーニングなどを積極的に提案させて頂きます。</p>
+        <p class="indent">こんにちは、ながつき整骨院、院長の木村康寛と申します。10年以上のキャリアから、患者様と二人三脚で治していく事を強みとしており、ご自宅でのケアの仕方、再発しないような筋力トレーニングなどを積極的に提案させて頂きます。</p>
         <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされる、そんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
       </div>
     </section>
@@ -233,18 +233,8 @@
 
     <section id="access" class="sec access">
       <h2>アクセス</h2>
-      <p class="text">あおば整骨院グループでは、２つの整骨院を経営しております。ご自宅から通いやすい方へお越し下さいませ。</p>
+      <p class="text">ながつき整骨院は、東急田園都市線「青葉台駅」よりバス３分となります。</p>
       <div class="i_block">
-        <h3>やよい整骨院</h3>
-        <div class="gmap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1068.9560160974665!2d139.5248077443398!3d35.53831017182531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2c8549db98ada227!2z44KE44KI44GE5pW06aqo6Zmi!5e0!3m2!1sja!2sjp!4v1582958065304!5m2!1sja!2sjp" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        <p class="address">〒227-0052<br>
-        神奈川県横浜市青葉区梅が丘7-3 メゾン青葉台104<br>
-        東急田園都市線 藤が丘駅より徒歩8分</p>
-      </div>
-      <div class="i_block">
-        <h3>ながつき整骨院</h3>
         <div class="gmap">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d811.5177684182634!2d139.51357172667542!3d35.55194684465979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f9cc3c309bcf%3A0xb16fba975a3a6411!2z44Gq44GM44Gk44GN5pW06aqo6Zmi!5e0!3m2!1sja!2sjp!4v1582959420709!5m2!1sja!2sjp" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
