--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <section id="access" class="sec access">
       <h2>アクセス</h2>
-      <p class="text">ながつき整骨院は、東急田園都市線「青葉台駅」よりバス３分となります。</p>
+      <p class="text">青葉台駅よりバスをご利用の方は、青葉台駅バス停「鴨志田団地行」もしくは「桐蔭学園前行」の「桜台ビレッジ前」にて下車をお願い致します。</p>
       <div class="i_block">
         <div class="gmap">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d811.5177684182634!2d139.51357172667542!3d35.55194684465979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f9cc3c309bcf%3A0xb16fba975a3a6411!2z44Gq44GM44Gk44GN5pW06aqo6Zmi!5e0!3m2!1sja!2sjp!4v1582959420709!5m2!1sja!2sjp" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
