--- a/index.html
+++ b/index.html
@@ -182,23 +182,23 @@
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_01.png" alt="喜びの声">
-          <span>アスリート<br> 栗山様</span>
+          <span>会社員<br> 〓〓様</span>
         </div>
         <p class="voice_item_txt indent">先生はとてもよく体のことを勉強なさっている方で、説明も丁寧です。専門機器なども適宜用いて個人個人に合わせた施術を行っていて、施術前後でどのように体が変化したかも自覚できる形で提示してくれるので、効果が実感できます。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_02.png" alt="喜びの声">
-          <span>看護師 藤田様</span>
+          <span>看護師 Y・S様</span>
         </div>
-        <p class="voice_item_txt indent">とても優しく丁寧に対応していただいています。長年悩んでいたひざの痛みは1回受けただけでもかなり改善し、腰の痛みも楽になりました。続けて通うことで、メンテナンスレベルからパフォーマンス向上まで期待する事ができます。</p>
+        <p class="voice_item_txt indent">タブレットを使って画像を見せてもらいながら、説明を丁寧にしてくれたので分かりやすかったです。また、美容鍼の効果が良くて、化粧乗りも良くなるし、顔が明るくなってびっくりでした。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_03.png" alt="喜びの声">
-          <span>会社員 菊地様</span>
+          <span>会社員 〓〓様</span>
         </div>
-        <p class="voice_item_txt indent">まずはお試しで行ってみようと思い治療を受けに行きました。自分が想像してた以上に１回の治療だけで楽になりました。不思議なことに治療を受けだしてから、朝起きるときに痛かった腰の痛みと、立ち上がる時の痛みが改善された事を実感しています。</p>
+        <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、凄い楽になり真っ直ぐになって帰ることが出来ました。その後も自宅でのケアや身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。ありがとうございます。</p>
       </div>
     </section>
 
