--- a/index.html
+++ b/index.html
@@ -189,16 +189,16 @@
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_02.png" alt="喜びの声">
-          <span>看護師 Y・S様</span>
+          <span>看護師<br> Y・S様</span>
         </div>
-        <p class="voice_item_txt indent">タブレットを使って画像を見せてもらいながら、説明を丁寧にしてくれたので分かりやすかったです。また、美容鍼の効果が良くて、化粧乗りも良くなるし、顔が明るくなってびっくりでした。</p>
+        <p class="voice_item_txt indent">タブレットを使って画像を見せてもらいながら、説明や解説を丁寧にしてくれたので分かりやすかったです。また、美容鍼の効果が想像以上に良くて、化粧乗りも良くなるし、顔が明るくなってびっくりでした。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_03.png" alt="喜びの声">
-          <span>会社員 〓〓様</span>
+          <span>会社員<br> 〓〓様</span>
         </div>
-        <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、凄い楽になり真っ直ぐになって帰ることが出来ました。その後も自宅でのケアや身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。ありがとうございます。</p>
+        <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、楽になり真っ直ぐになって帰ることが出来ました。アフターケアも身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。</p>
       </div>
     </section>
 
