--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <img src="img/img_voice_03.png" alt="喜びの声">
           <span>会社員<br> 〓〓様</span>
         </div>
-        <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、楽になり真っ直ぐになって帰ることが出来ました。アフターケアも身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。</p>
+        <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、楽になり真っ直ぐになって帰ることが出来ました。アフターケアも身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。ありがとうございました!!</p>
       </div>
     </section>
 
