--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <nav class="h_nav">
       <a class="logo" href="#top">
-        <img src="img/h_logo.png" alt="ながつき整骨院">
+        <img src="img/h_logo.svg" alt="ながつき整骨院">
       </a>
       <div class="menu_container">
         <a id="menu_btn" class="menu-trigger" href="#">
