--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
     <div class="footer_fixed">
       <div class="tel_bnr">
         <ul>
-          <li><a href="tel:045-985-4222"><img src="img/f_tel01.png" alt=""></a></li>
-          <li><a href="tel:045-530-5512"><img src="img/f_tel02.png" alt=""></a></li>
+          <li><a href="tel:045-985-4222"><img src="img/f_tel01.png" alt="ながつき整骨院"></a></li>
+          <li><a href="tel:045-530-5512"><img src="img/f_tel02.png" alt="やよい整骨院"></a></li>
         </ul>
       </div>
     </div>
