--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800;900&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/hamburger.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js" charset="utf-8"></script>
 </head>
 <body>
@@ -35,14 +36,14 @@
     <div id="gloval-nav">
       <nav>
         <ul id="navigation">
-          <li><a href="#salesContents" class="ls">ながつき整骨院について</a></li>
-          <li><a href="#info" class="ls">料金の目安</a></li>
-          <li><a href="#info_time" class="ls">診療の時間</a></li>
-          <li><a href="#info_3feature" class="ls">整骨院の３つの特徴</a></li>
-          <li><a href="#introduction" class="ls">院長紹介</a></li>
-          <li><a href="#voice" class="ls">患者様の喜びの声</a></li>
-          <li><a href="#contactForm" class="ls">お問い合わせ</a></li>
-          <li><a href="#access" class="ls">アクセス</a></li>
+          <li><a href="#salesContents_anc" class="ls">ながつき整骨院について</a></li>
+          <li><a href="#info_price_anc" class="ls">料金の目安</a></li>
+          <li><a href="#info_time_anc" class="ls">診療の時間</a></li>
+          <li><a href="#info_3feature_anc" class="ls">整骨院の３つの特徴</a></li>
+          <li><a href="#introduction_anc" class="ls">院長紹介</a></li>
+          <li><a href="#voice_anc" class="ls">患者様の喜びの声</a></li>
+          <li><a href="#contactForm_anc" class="ls">お問い合わせ</a></li>
+          <li><a href="#access_anc" class="ls">アクセス</a></li>
         </ul>
       </nav>
 
@@ -54,6 +55,7 @@
         <img src="img/mv_01.jpg" alt="ながつき整骨院">
       </div>
     </section>
+    <div id="salesContents_anc"></div>
     <section id="salesContents" class="sec">
       <div class="salesContents_bnr">
         <img src="img/salesContents.png" alt="延長サービス">
@@ -76,11 +78,12 @@
         <li><a href><img src="img/bnr_06.jpg" alt="交通事故"></a></li>
       </ul>
       <div class="contactBtn_block">
-        <a href="#contactForm"><img src="img/contact_btn.png" alt="問い合わせする"></a>
+        <a href="#contactForm_anc"><img src="img/contact_btn.png" alt="問い合わせする"></a>
       </div>
     </section>
     <section id="info" class="sec">
       <div class="i_block info_price">
+        <div id="info_price_anc"></div>
         <h2>料金の目安</h2>
         <p class="text">カウンセリング、電気治療、15分のマッサージ治療を行う通常の施術料金は下記の通りです。</p>
         <table class="price_table">
@@ -111,6 +114,7 @@
         </table>
         <p class="annotation">※ 医療保険の自己負担割合によって金額が異なります。</p>
       </div>
+      <div id="info_time_anc"></div>
       <div id="info_time" class="i_block info_time">
         <h2>診療時間</h2>
         <p class="text">平日21時まで受付しておりますので、お仕事帰りでもお越しいただけます。無料相談も受付中です。</p>
@@ -152,6 +156,7 @@
         </table>
         <p class="annotation">※ 土曜日…午後18:00までの受付　休診日…日曜日・祝日</p>
       </div>
+      <div id="info_3feature_anc"></div>
       <div id="info_3feature" class="info_3feature">
         <h2>整骨院の３つの特徴</h2>
 
@@ -167,6 +172,7 @@
         <p class="text bgImg_03">ながつき整骨院では、部分の痛みだけの治療でなく、痛みの原因を見極めて適切な治療をしていくことで、早期改善を目指します。電気をあてて湿布を渡すだけの施術は行っておりませんのでご安心下さい。</p>
       </div>
     </section>
+    <div id="introduction_anc"></div>
     <section id="introduction" class="sec">
       <h2>院長挨拶</h2>
       <div class="introduction_img_box">
@@ -177,6 +183,7 @@
         <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされる、そんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
       </div>
     </section>
+    <div id="voice_anc"></div>
     <section id="voice" class="sec">
       <h2>患者様の喜びの声</h2>
       <div class="voice_item">
@@ -202,6 +209,7 @@
       </div>
     </section>
 
+    <div id="contactForm_anc"></div>
     <section id="contactForm" class="sec">
       <h2>お問い合わせ</h2>
       <form>
@@ -231,6 +239,7 @@
       </div>
     </section>
 
+    <div id="access_anc"></div>
     <section id="access" class="sec access">
       <h2>アクセス</h2>
       <p class="text">青葉台駅よりバスをご利用の方は、青葉台駅バス停「鴨志田団地行」もしくは「桐蔭学園前行」のバスにご乗車下さい。「桜台ビレッジ前」にて下車をお願いします。</p>
