--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_01.png" alt="喜びの声">
-          <span>会社員<br> 〓〓様</span>
+          <span>会社員<br> S・H様</span>
         </div>
-        <p class="voice_item_txt indent">先生はとてもよく体のことを勉強なさっている方で、説明も丁寧です。専門機器なども適宜用いて個人個人に合わせた施術を行っていて、施術前後でどのように体が変化したかも自覚できる形で提示してくれるので、効果が実感できます。</p>
+        <p class="voice_item_txt indent">丁寧な説明でタブレットを使って画像を見せながら説明して頂き、分かりやすかったです。自宅でのセルフストレッチや実際に一緒に運動して見せて頂きながらなので覚えやすかったです。腰痛でお困りな方には特におすすめです。</p>
       </div>
       <div class="voice_item">
         <div class="voice_item_imgBlock">
@@ -203,7 +203,7 @@
       <div class="voice_item">
         <div class="voice_item_imgBlock">
           <img src="img/img_voice_03.png" alt="喜びの声">
-          <span>会社員<br> 〓〓様</span>
+          <span>会社員<br> H・K様</span>
         </div>
         <p class="voice_item_txt indent">ぎっくり腰になってしまったことを機に治療してもらいました。腰が曲がったままで辛かったですが、治療後、楽になり真っ直ぐになって帰ることが出来ました。アフターケアも身体の使い方、動かし方を指導して頂き、安心して過ごせる様になりました。ありがとうございました!!</p>
       </div>
