--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
         <p class="indent">こんにちは、ながつき整骨院、院長の木村康寛と申します。10年以上のキャリアから、患者様と二人三脚で治していく事を強みとしており、ご自宅でのケアの仕方、再発しないような筋力トレーニングなどを積極的に提案させて頂きます。</p>
         <p class="indent">痛みやお身体の不調が無くなるように手助けしていく中で、横浜市、青葉台地域の多くの方から喜ばれる、必要とされる、そんな整骨院を目指します。どうぞ宜しくお願い致します。</p>
       </div>
+      <div class="name">
+        <p>院長&emsp;木村&nbsp;康寛</p>
+      </div>
     </section>
     <div id="voice_anc"></div>
     <section id="voice" class="sec">
